force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/cnx__Connects_Configuration_Assignment__c.object-meta.xml
<CustomObject>
    <description>Relation between any user and a b+s Configuration. If a user does not have a b+s Configuration assigned, the default configuration record is used.</description>
    <label>b+s Configurations Assigned User</label>
    <nameField>
        <displayFormat>CNXA-{000000}</displayFormat>
        <label>b+s Configuration Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>b+s Configurations Assigned Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>