force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/fields/cnx__Assigned_Connects_Configuration__c.field-meta.xml
<CustomField>
    <fullName>cnx__Assigned_Connects_Configuration__c</fullName>
    <description>Assigned b+s Connects configuration.</description>
    <label>b+s Configuration</label>
    <referenceTo>cnx__Connects_Configuration__c</referenceTo>
    <relationshipName>Connects_Configuration_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>