force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/fields/cnx__Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>cnx__Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned user.</description>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connects_Configuration_User_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>