force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/fields/cnx__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>cnx__Full_Name__c</fullName>
    <description>Assigned user full name.</description>
    <formula>cnx__Assigned_User__r.FirstName + &apos; &apos; +  cnx__Assigned_User__r.LastName</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>