force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/fields/cnx__Profile__c.field-meta.xml
<CustomField>
    <fullName>cnx__Profile__c</fullName>
    <description>Assigned user profile.</description>
    <formula>cnx__Assigned_User__r.Profile.Name</formula>
    <label>Profile</label>
    <type>Text</type>
</CustomField>