force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/fields/cnx__Role__c.field-meta.xml
<CustomField>
    <fullName>cnx__Role__c</fullName>
    <description>Assigned user role.</description>
    <formula>cnx__Assigned_User__r.UserRole.Name</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>