force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/fields/cnx__Username__c.field-meta.xml
<CustomField>
    <fullName>cnx__Username__c</fullName>
    <description>Assigned user username.</description>
    <formula>cnx__Assigned_User__r.Username</formula>
    <label>Username</label>
    <type>Text</type>
</CustomField>