force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/listViews/cnx__All.listView-meta.xml
<ListView>
    <fullName>cnx__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>