force-app/main/default/objects/cnx__Connects_Configuration_Assignment__c/listViews/cnx__ViewAllAssignments.listView-meta.xml
<ListView>
    <fullName>cnx__ViewAllAssignments</fullName>
    <columns>cnx__Assigned_Connects_Configuration__c</columns>
    <columns>cnx__Assigned_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cnx__Assigned_User__c</field>
        <operation>contains</operation>
        <value>garig</value>
    </filters>
    <label>View All Assignments</label>
</ListView>